base apparel coming soon: fix hero image overflow

--- a/newbie/base-apparel-coming-soon/styles/style.css
+++ b/newbie/base-apparel-coming-soon/styles/style.css
@@ -82,9 +82,7 @@ body {
 
 .hero__picture img {
 	width: 100%;
-	height: 100%;
 	object-fit: cover;
-	object-position: center top;
 }
 
 /* ---- MAIN SECTION STYLES ---- */
@@ -227,7 +225,7 @@ body {
 			'main hero'
 			'attribution hero';
 
-		min-height: 100vh;
+		height: 100vh;
 		background: url('../images/bg-pattern-desktop.svg') left / 55% no-repeat,
 			var(--body-background-gradient);
 	}
@@ -235,6 +233,11 @@ body {
 	.header {
 		padding-bottom: 0;
 		width: 80%;
+	}
+
+	.hero__picture img {
+		min-height: 100%;
+		object-position: center top;
 	}
 
 	.main {
